parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS expression
Rule 2     expression -> expression TIMES expression
Rule 3     expression -> expression MINUS expression
Rule 4     expression -> expression DIVIDED expression
Rule 5     expression -> expression DIFFERENT expression
Rule 6     expression -> expression EQUAL expression
Rule 7     expression -> expression LESSEREQ expression
Rule 8     expression -> expression GREATEREQ expression
Rule 9     expression -> expression LESSER expression
Rule 10    expression -> expression GREATER expression
Rule 11    expression -> MINUS expression
Rule 12    expression -> expression OR expression
Rule 13    expression -> expression AND expression
Rule 14    expression -> NOT expression
Rule 15    expression -> expression DCOLON expression
Rule 16    expression -> IF expression THEN expression ELSE expression FI
Rule 17    expression -> LET p EQUAL expression IN expression TEL
Rule 18    expression -> FUN lista ARROW expression NUF
Rule 19    expression -> FUN lista ARROW expression PIPE fun_rec
Rule 20    fun_rec -> lista ARROW expression PIPE fun_rec
Rule 21    fun_rec -> lista ARROW expression NUF
Rule 22    lista -> lista p
Rule 23    lista -> p
Rule 24    expression -> e
Rule 25    e -> e e
Rule 26    e -> NUMBER
Rule 27    e -> ID
Rule 28    e -> OBRAKET CBRAKET
Rule 29    e -> TRUE
Rule 30    e -> FALSE
Rule 31    e -> OPAREN expression CPAREN
Rule 32    p -> patron
Rule 33    patron -> NUMBER
Rule 34    patron -> TRUE
Rule 35    patron -> FALSE
Rule 36    patron -> ID
Rule 37    patron -> OPAREN patron CPAREN
Rule 38    patron -> p DCOLON p
Rule 39    patron -> OBRAKET CBRAKET

Terminals, with rules where they appear

AND                  : 13
ARROW                : 18 19 20 21
CBRAKET              : 28 39
CPAREN               : 31 37
DCOLON               : 15 38
DIFFERENT            : 5
DIVIDED              : 4
ELSE                 : 16
EQUAL                : 6 17
FALSE                : 30 35
FI                   : 16
FUN                  : 18 19
GREATER              : 10
GREATEREQ            : 8
ID                   : 27 36
IF                   : 16
IN                   : 17
LESSER               : 9
LESSEREQ             : 7
LET                  : 17
MINUS                : 3 11
NOT                  : 14
NUF                  : 18 21
NUMBER               : 26 33
OBRAKET              : 28 39
OPAREN               : 31 37
OR                   : 12
PIPE                 : 19 20
PLUS                 : 1
TEL                  : 17
THEN                 : 16
TIMES                : 2
TRUE                 : 29 34
error                : 

Nonterminals, with rules where they appear

e                    : 24 25 25
expression           : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 12 12 13 13 14 15 15 16 16 16 17 17 18 19 20 21 31 0
fun_rec              : 19 20
lista                : 18 19 20 21 22
p                    : 17 22 23 38 38
patron               : 32 37

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression TIMES expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression DIVIDED expression
    (5) expression -> . expression DIFFERENT expression
    (6) expression -> . expression EQUAL expression
    (7) expression -> . expression LESSEREQ expression
    (8) expression -> . expression GREATEREQ expression
    (9) expression -> . expression LESSER expression
    (10) expression -> . expression GREATER expression
    (11) expression -> . MINUS expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . NOT expression
    (15) expression -> . expression DCOLON expression
    (16) expression -> . IF expression THEN expression ELSE expression FI
    (17) expression -> . LET p EQUAL expression IN expression TEL
    (18) expression -> . FUN lista ARROW expression NUF
    (19) expression -> . FUN lista ARROW expression PIPE fun_rec
    (24) expression -> . e
    (25) e -> . e e
    (26) e -> . NUMBER
    (27) e -> . ID
    (28) e -> . OBRAKET CBRAKET
    (29) e -> . TRUE
    (30) e -> . FALSE
    (31) e -> . OPAREN expression CPAREN

    MINUS           shift and go to state 3
    NOT             shift and go to state 12
    IF              shift and go to state 8
    LET             shift and go to state 10
    FUN             shift and go to state 1
    NUMBER          shift and go to state 5
    ID              shift and go to state 7
    OBRAKET         shift and go to state 4
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    OPAREN          shift and go to state 11

    expression                     shift and go to state 13
    e                              shift and go to state 9

state 1

    (18) expression -> FUN . lista ARROW expression NUF
    (19) expression -> FUN . lista ARROW expression PIPE fun_rec
    (22) lista -> . lista p
    (23) lista -> . p
    (32) p -> . patron
    (33) patron -> . NUMBER
    (34) patron -> . TRUE
    (35) patron -> . FALSE
    (36) patron -> . ID
    (37) patron -> . OPAREN patron CPAREN
    (38) patron -> . p DCOLON p
    (39) patron -> . OBRAKET CBRAKET

    NUMBER          shift and go to state 18
    TRUE            shift and go to state 22
    FALSE           shift and go to state 14
    ID              shift and go to state 21
    OPAREN          shift and go to state 20
    OBRAKET         shift and go to state 19

    lista                          shift and go to state 17
    patron                         shift and go to state 15
    p                              shift and go to state 16

state 2

    (29) e -> TRUE .

    NUMBER          reduce using rule 29 (e -> TRUE .)
    ID              reduce using rule 29 (e -> TRUE .)
    OBRAKET         reduce using rule 29 (e -> TRUE .)
    TRUE            reduce using rule 29 (e -> TRUE .)
    FALSE           reduce using rule 29 (e -> TRUE .)
    OPAREN          reduce using rule 29 (e -> TRUE .)
    PLUS            reduce using rule 29 (e -> TRUE .)
    TIMES           reduce using rule 29 (e -> TRUE .)
    MINUS           reduce using rule 29 (e -> TRUE .)
    DIVIDED         reduce using rule 29 (e -> TRUE .)
    DIFFERENT       reduce using rule 29 (e -> TRUE .)
    EQUAL           reduce using rule 29 (e -> TRUE .)
    LESSEREQ        reduce using rule 29 (e -> TRUE .)
    GREATEREQ       reduce using rule 29 (e -> TRUE .)
    LESSER          reduce using rule 29 (e -> TRUE .)
    GREATER         reduce using rule 29 (e -> TRUE .)
    OR              reduce using rule 29 (e -> TRUE .)
    AND             reduce using rule 29 (e -> TRUE .)
    DCOLON          reduce using rule 29 (e -> TRUE .)
    $end            reduce using rule 29 (e -> TRUE .)
    THEN            reduce using rule 29 (e -> TRUE .)
    CPAREN          reduce using rule 29 (e -> TRUE .)
    NUF             reduce using rule 29 (e -> TRUE .)
    PIPE            reduce using rule 29 (e -> TRUE .)
    ELSE            reduce using rule 29 (e -> TRUE .)
    IN              reduce using rule 29 (e -> TRUE .)
    FI              reduce using rule 29 (e -> TRUE .)
    TEL             reduce using rule 29 (e -> TRUE .)


state 3

    (11) expression -> MINUS . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression TIMES expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression DIVIDED expression
    (5) expression -> . expression DIFFERENT expression
    (6) expression -> . expression EQUAL expression
    (7) expression -> . expression LESSEREQ expression
    (8) expression -> . expression GREATEREQ expression
    (9) expression -> . expression LESSER expression
    (10) expression -> . expression GREATER expression
    (11) expression -> . MINUS expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . NOT expression
    (15) expression -> . expression DCOLON expression
    (16) expression -> . IF expression THEN expression ELSE expression FI
    (17) expression -> . LET p EQUAL expression IN expression TEL
    (18) expression -> . FUN lista ARROW expression NUF
    (19) expression -> . FUN lista ARROW expression PIPE fun_rec
    (24) expression -> . e
    (25) e -> . e e
    (26) e -> . NUMBER
    (27) e -> . ID
    (28) e -> . OBRAKET CBRAKET
    (29) e -> . TRUE
    (30) e -> . FALSE
    (31) e -> . OPAREN expression CPAREN

    MINUS           shift and go to state 3
    NOT             shift and go to state 12
    IF              shift and go to state 8
    LET             shift and go to state 10
    FUN             shift and go to state 1
    NUMBER          shift and go to state 5
    ID              shift and go to state 7
    OBRAKET         shift and go to state 4
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    OPAREN          shift and go to state 11

    expression                     shift and go to state 23
    e                              shift and go to state 9

state 4

    (28) e -> OBRAKET . CBRAKET

    CBRAKET         shift and go to state 24


state 5

    (26) e -> NUMBER .

    NUMBER          reduce using rule 26 (e -> NUMBER .)
    ID              reduce using rule 26 (e -> NUMBER .)
    OBRAKET         reduce using rule 26 (e -> NUMBER .)
    TRUE            reduce using rule 26 (e -> NUMBER .)
    FALSE           reduce using rule 26 (e -> NUMBER .)
    OPAREN          reduce using rule 26 (e -> NUMBER .)
    PLUS            reduce using rule 26 (e -> NUMBER .)
    TIMES           reduce using rule 26 (e -> NUMBER .)
    MINUS           reduce using rule 26 (e -> NUMBER .)
    DIVIDED         reduce using rule 26 (e -> NUMBER .)
    DIFFERENT       reduce using rule 26 (e -> NUMBER .)
    EQUAL           reduce using rule 26 (e -> NUMBER .)
    LESSEREQ        reduce using rule 26 (e -> NUMBER .)
    GREATEREQ       reduce using rule 26 (e -> NUMBER .)
    LESSER          reduce using rule 26 (e -> NUMBER .)
    GREATER         reduce using rule 26 (e -> NUMBER .)
    OR              reduce using rule 26 (e -> NUMBER .)
    AND             reduce using rule 26 (e -> NUMBER .)
    DCOLON          reduce using rule 26 (e -> NUMBER .)
    $end            reduce using rule 26 (e -> NUMBER .)
    THEN            reduce using rule 26 (e -> NUMBER .)
    CPAREN          reduce using rule 26 (e -> NUMBER .)
    NUF             reduce using rule 26 (e -> NUMBER .)
    PIPE            reduce using rule 26 (e -> NUMBER .)
    ELSE            reduce using rule 26 (e -> NUMBER .)
    IN              reduce using rule 26 (e -> NUMBER .)
    FI              reduce using rule 26 (e -> NUMBER .)
    TEL             reduce using rule 26 (e -> NUMBER .)


state 6

    (30) e -> FALSE .

    NUMBER          reduce using rule 30 (e -> FALSE .)
    ID              reduce using rule 30 (e -> FALSE .)
    OBRAKET         reduce using rule 30 (e -> FALSE .)
    TRUE            reduce using rule 30 (e -> FALSE .)
    FALSE           reduce using rule 30 (e -> FALSE .)
    OPAREN          reduce using rule 30 (e -> FALSE .)
    PLUS            reduce using rule 30 (e -> FALSE .)
    TIMES           reduce using rule 30 (e -> FALSE .)
    MINUS           reduce using rule 30 (e -> FALSE .)
    DIVIDED         reduce using rule 30 (e -> FALSE .)
    DIFFERENT       reduce using rule 30 (e -> FALSE .)
    EQUAL           reduce using rule 30 (e -> FALSE .)
    LESSEREQ        reduce using rule 30 (e -> FALSE .)
    GREATEREQ       reduce using rule 30 (e -> FALSE .)
    LESSER          reduce using rule 30 (e -> FALSE .)
    GREATER         reduce using rule 30 (e -> FALSE .)
    OR              reduce using rule 30 (e -> FALSE .)
    AND             reduce using rule 30 (e -> FALSE .)
    DCOLON          reduce using rule 30 (e -> FALSE .)
    $end            reduce using rule 30 (e -> FALSE .)
    THEN            reduce using rule 30 (e -> FALSE .)
    CPAREN          reduce using rule 30 (e -> FALSE .)
    NUF             reduce using rule 30 (e -> FALSE .)
    PIPE            reduce using rule 30 (e -> FALSE .)
    ELSE            reduce using rule 30 (e -> FALSE .)
    IN              reduce using rule 30 (e -> FALSE .)
    FI              reduce using rule 30 (e -> FALSE .)
    TEL             reduce using rule 30 (e -> FALSE .)


state 7

    (27) e -> ID .

    NUMBER          reduce using rule 27 (e -> ID .)
    ID              reduce using rule 27 (e -> ID .)
    OBRAKET         reduce using rule 27 (e -> ID .)
    TRUE            reduce using rule 27 (e -> ID .)
    FALSE           reduce using rule 27 (e -> ID .)
    OPAREN          reduce using rule 27 (e -> ID .)
    PLUS            reduce using rule 27 (e -> ID .)
    TIMES           reduce using rule 27 (e -> ID .)
    MINUS           reduce using rule 27 (e -> ID .)
    DIVIDED         reduce using rule 27 (e -> ID .)
    DIFFERENT       reduce using rule 27 (e -> ID .)
    EQUAL           reduce using rule 27 (e -> ID .)
    LESSEREQ        reduce using rule 27 (e -> ID .)
    GREATEREQ       reduce using rule 27 (e -> ID .)
    LESSER          reduce using rule 27 (e -> ID .)
    GREATER         reduce using rule 27 (e -> ID .)
    OR              reduce using rule 27 (e -> ID .)
    AND             reduce using rule 27 (e -> ID .)
    DCOLON          reduce using rule 27 (e -> ID .)
    $end            reduce using rule 27 (e -> ID .)
    THEN            reduce using rule 27 (e -> ID .)
    CPAREN          reduce using rule 27 (e -> ID .)
    NUF             reduce using rule 27 (e -> ID .)
    PIPE            reduce using rule 27 (e -> ID .)
    ELSE            reduce using rule 27 (e -> ID .)
    IN              reduce using rule 27 (e -> ID .)
    FI              reduce using rule 27 (e -> ID .)
    TEL             reduce using rule 27 (e -> ID .)


state 8

    (16) expression -> IF . expression THEN expression ELSE expression FI
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression TIMES expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression DIVIDED expression
    (5) expression -> . expression DIFFERENT expression
    (6) expression -> . expression EQUAL expression
    (7) expression -> . expression LESSEREQ expression
    (8) expression -> . expression GREATEREQ expression
    (9) expression -> . expression LESSER expression
    (10) expression -> . expression GREATER expression
    (11) expression -> . MINUS expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . NOT expression
    (15) expression -> . expression DCOLON expression
    (16) expression -> . IF expression THEN expression ELSE expression FI
    (17) expression -> . LET p EQUAL expression IN expression TEL
    (18) expression -> . FUN lista ARROW expression NUF
    (19) expression -> . FUN lista ARROW expression PIPE fun_rec
    (24) expression -> . e
    (25) e -> . e e
    (26) e -> . NUMBER
    (27) e -> . ID
    (28) e -> . OBRAKET CBRAKET
    (29) e -> . TRUE
    (30) e -> . FALSE
    (31) e -> . OPAREN expression CPAREN

    MINUS           shift and go to state 3
    NOT             shift and go to state 12
    IF              shift and go to state 8
    LET             shift and go to state 10
    FUN             shift and go to state 1
    NUMBER          shift and go to state 5
    ID              shift and go to state 7
    OBRAKET         shift and go to state 4
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    OPAREN          shift and go to state 11

    expression                     shift and go to state 25
    e                              shift and go to state 9

state 9

    (24) expression -> e .
    (25) e -> e . e
    (25) e -> . e e
    (26) e -> . NUMBER
    (27) e -> . ID
    (28) e -> . OBRAKET CBRAKET
    (29) e -> . TRUE
    (30) e -> . FALSE
    (31) e -> . OPAREN expression CPAREN

    PLUS            reduce using rule 24 (expression -> e .)
    TIMES           reduce using rule 24 (expression -> e .)
    MINUS           reduce using rule 24 (expression -> e .)
    DIVIDED         reduce using rule 24 (expression -> e .)
    DIFFERENT       reduce using rule 24 (expression -> e .)
    EQUAL           reduce using rule 24 (expression -> e .)
    LESSEREQ        reduce using rule 24 (expression -> e .)
    GREATEREQ       reduce using rule 24 (expression -> e .)
    LESSER          reduce using rule 24 (expression -> e .)
    GREATER         reduce using rule 24 (expression -> e .)
    OR              reduce using rule 24 (expression -> e .)
    AND             reduce using rule 24 (expression -> e .)
    DCOLON          reduce using rule 24 (expression -> e .)
    $end            reduce using rule 24 (expression -> e .)
    THEN            reduce using rule 24 (expression -> e .)
    CPAREN          reduce using rule 24 (expression -> e .)
    NUF             reduce using rule 24 (expression -> e .)
    PIPE            reduce using rule 24 (expression -> e .)
    ELSE            reduce using rule 24 (expression -> e .)
    IN              reduce using rule 24 (expression -> e .)
    FI              reduce using rule 24 (expression -> e .)
    TEL             reduce using rule 24 (expression -> e .)
    NUMBER          shift and go to state 5
    ID              shift and go to state 7
    OBRAKET         shift and go to state 4
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    OPAREN          shift and go to state 11

    e                              shift and go to state 26

state 10

    (17) expression -> LET . p EQUAL expression IN expression TEL
    (32) p -> . patron
    (33) patron -> . NUMBER
    (34) patron -> . TRUE
    (35) patron -> . FALSE
    (36) patron -> . ID
    (37) patron -> . OPAREN patron CPAREN
    (38) patron -> . p DCOLON p
    (39) patron -> . OBRAKET CBRAKET

    NUMBER          shift and go to state 18
    TRUE            shift and go to state 22
    FALSE           shift and go to state 14
    ID              shift and go to state 21
    OPAREN          shift and go to state 20
    OBRAKET         shift and go to state 19

    p                              shift and go to state 27
    patron                         shift and go to state 15

state 11

    (31) e -> OPAREN . expression CPAREN
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression TIMES expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression DIVIDED expression
    (5) expression -> . expression DIFFERENT expression
    (6) expression -> . expression EQUAL expression
    (7) expression -> . expression LESSEREQ expression
    (8) expression -> . expression GREATEREQ expression
    (9) expression -> . expression LESSER expression
    (10) expression -> . expression GREATER expression
    (11) expression -> . MINUS expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . NOT expression
    (15) expression -> . expression DCOLON expression
    (16) expression -> . IF expression THEN expression ELSE expression FI
    (17) expression -> . LET p EQUAL expression IN expression TEL
    (18) expression -> . FUN lista ARROW expression NUF
    (19) expression -> . FUN lista ARROW expression PIPE fun_rec
    (24) expression -> . e
    (25) e -> . e e
    (26) e -> . NUMBER
    (27) e -> . ID
    (28) e -> . OBRAKET CBRAKET
    (29) e -> . TRUE
    (30) e -> . FALSE
    (31) e -> . OPAREN expression CPAREN

    MINUS           shift and go to state 3
    NOT             shift and go to state 12
    IF              shift and go to state 8
    LET             shift and go to state 10
    FUN             shift and go to state 1
    NUMBER          shift and go to state 5
    ID              shift and go to state 7
    OBRAKET         shift and go to state 4
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    OPAREN          shift and go to state 11

    expression                     shift and go to state 28
    e                              shift and go to state 9

state 12

    (14) expression -> NOT . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression TIMES expression
    (3) expression -> . expression MINUS expression
    (4) expression -> . expression DIVIDED expression
    (5) expression -> . expression DIFFERENT expression
    (6) expression -> . expression EQUAL expression
    (7) expression -> . expression LESSEREQ expression
    (8) expression -> . expression GREATEREQ expression
    (9) expression -> . expression LESSER expression
    (10) expression -> . expression GREATER expression
    (11) expression -> . MINUS expression
    (12) expression -> . expression OR expression
    (13) expression -> . expression AND expression
    (14) expression -> . NOT expression
    (15) expression -> . expression DCOLON expression
    (16) expression -> . IF expression THEN expression ELSE expression FI
    (17) expression -> . LET p EQUAL expression IN expression TEL
    (18) expression -> . FUN lista ARROW expression NUF
    (19) expression -> . FUN lista ARROW expression PIPE fun_rec
    (24) expression -> . e
    (25) e -> . e e
    (26) e -> . NUMBER
    (27) e -> . ID
    (28) e -> . OBRAKET CBRAKET
    (29) e -> . TRUE
    (30) e -> . FALSE
    (31) e -> . OPAREN expression CPAREN

    MINUS           shift and go to state 3
    NOT             shift and go to state 12
    IF              shift and go to state 8
    LET             shift and go to state 10
    FUN             shift and go to state 1
    NUMBER          shift and go to state 5
    ID              shift and go to state 7
    OBRAKET         shift and go to state 4
    TRUE            shift and go to state 2
    FALSE           shift and go to state 6
    OPAREN          shift and go to state 11

    expression                     shift and go to state 29
    e                              shift and go to state 9

state 13

    (0) S' -> expression .
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . TIMES expression
    (3) expression -> expression . MINUS expression
    (4) expression -> expression . DIVIDED expression
    (5) expression -> expression . DIFFERENT expression
    (6) expression -> expression . EQUAL expression
    (7) expression -> expression . LESSEREQ expression
    (8) expression -> expression . GREATEREQ expression
    (9) expression -> expression . LESSER expression
    (10) expression -> expression . GREATER expression
    (12) expression -> expression . OR expression
    (13) expression -> expression . AND expression
    (15) expression -> expression . DCOLON expression

    PLUS            shift and go to state 39
    TIMES           shift and go to state 36
    MINUS           shift and go to state 41
    DIVIDED         shift and go to state 33
    DIFFERENT       shift and go to state 31
    EQUAL           shift and go to state 35
    LESSEREQ        shift and go to state 34
    GREATEREQ       shift and go to state 38
    LESSER          shift and go to state 37
    GREATER         shift and go to state 32
    OR              shift and go to state 42
    AND             shift and go to state 30
    DCOLON          shift and go to state 40


state 14

    (35) patron -> FALSE .

    EQUAL           reduce using rule 35 (patron -> FALSE .)
    DCOLON          reduce using rule 35 (patron -> FALSE .)
    ARROW           reduce using rule 35 (patron -> FALSE .)
    NUMBER          reduce using rule 35 (patron -> FALSE .)
    TRUE            reduce using rule 35 (patron -> FALSE .)
    FALSE           reduce using rule 35 (patron -> FALSE .)
    ID              reduce using rule 35 (patron -> FALSE .)
    OPAREN          reduce using rule 35 (patron -> FALSE .)
    OBRAKET         reduce using rule 35 (patron -> FALSE .)
    CPAREN          reduce using rule 35 (patron -> FALSE .)


state 15

    (32) p -> patron .

    DCOLON          reduce using rule 32 (p -> patron .)
    ARROW           reduce using rule 32 (p -> patron .)
    NUMBER          reduce using rule 32 (p -> patron .)
    TRUE            reduce using rule 32 (p -> patron .)
    FALSE           reduce using rule 32 (p -> patron .)
    ID              reduce using rule 32 (p -> patron .)
    OPAREN          reduce using rule 32 (p -> patron .)
    OBRAKET         reduce using rule 32 (p -> patron .)
    EQUAL           reduce using rule 32 (p -> patron .)
    CPAREN          reduce using rule 32 (p -> patron .)


state 16

    (23) lista -> p .
    (38) patron -> p . DCOLON p

    ARROW           reduce using rule 23 (lista -> p .)
    NUMBER          reduce using rule 23 (lista -> p .)
    TRUE            reduce using rule 23 (lista -> p .)
    FALSE           reduce using rule 23 (lista -> p .)
    ID              reduce using rule 23 (lista -> p .)
    OPAREN          reduce using rule 23 (lista -> p .)
    OBRAKET         reduce using rule 23 (lista -> p .)
    DCOLON          shift and go to state 43


state 17

    (18) expression -> FUN lista . ARROW expression NUF
    (19) expression -> FUN lista . ARROW expression PIPE fun_rec
    (22) lista -> lista . p
    (32) p -> . patron
    (33) patron -> . NUMBER
    (34) patron -> . TRUE
    (35) patron -> . FALSE
    (36) patron -> . ID
    (37) patron -> . OPAREN patron CPAREN
    (38) patron -> . p DCOLON p
    (39) patron -> . OBRAKET CBRAKET

    ARROW           shift and go to state 45
    NUMBER          shift and go to state 18
    TRUE            shift and go to state 22
    FALSE           shift and go to state 14
    ID              shift and go to state 21
    OPAREN          shift and go to state 20
    OBRAKET         shift and go to state 19

    patron                         shift and go to state 15
    p                              shift and go to state 44

state 18

    (33) patron -> NUMBER .
